# zpdgen

./: LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  cbj0.f  configure  configure.ac  cpolyev.f  cpolyev2.f  ctest.c  doxy.cfg  epszpd.f  ftest.f  gpdf.h  gpdf.py  gpdf_inmzpd.c  inmkur.f  inmzpd.f  itg_ai_loc.py  itg_ai_loc_comb.py  itg_ai_loc_mat.py  pldisp_specfun.c  pldisp_utils.c  plot_eps.py  plot_inm_im.py  plot_inm_re.py  plot_itg_jykim94.py  py_time.py  rpolyev.f  test.c  test.f  timetest.f  utils.f  wofzh.f  wofzmw.f  wofzwh.f  wofzwh16.f  wofzwh2.f  wofzwh4.f  (+1 more)
amos/: Makefile.am  Makefile.in  d9lgmc.f  dcsevl.f  initds.f  seterr.f
quadp/: Makefile.am  Makefile.in  dqag.f  dqagi.f  dqagp.f  xerror.f
