lib_LIBRARIES = libamos.a
libamos_a_SOURCES = d1mach.f  dgamln.f  fdump.f  i1mach.f  j4save.f  xercnt.f  xerhlt.f  xermsg.f  xerprn.f  xersve.f  xgetua.f  zabs.f  zacai.f  zairy.f  zasyi.f  zbesk.f zbesi.f zbesj.f  zbinu.f  zbknu.f  zbuni.f zdiv.f  zexp.f  zkscl.f  zlog.f  zmlri.f  zmlt.f zrati.f  zs1s2.f  zseri.f  zshch.f  zsqrt.f  zuchk.f  zunhj.f  zuni1.f  zuni2.f  zunik.f  zuoik.f  zwrsk.f zacon.f zbunk.f zunk2.f zunk1.f dgamma.f
libamos_a_FFLAGS = -fPIC
